--- a/index.html
+++ b/index.html
@@ -63,22 +63,20 @@
       <!-- SLIDER -->
       <div class="slider">
         <div class="slide">
-            <img src="sneak1.jpg" alt="" class="" >
-          </div>
-
-        <div class="slide">
-            <img src="sneak2.jpg" alt="" class="" >
-
+          <img src="sneak1.jpg" alt="" class="" />
         </div>
 
         <div class="slide">
-            <img src="sneak3.jpg" alt="" class="" >
+          <img src="sneak2.jpg" alt="" class="" />
+        </div>
 
-          </div>
+        <div class="slide">
+          <img src="sneak3.jpg" alt="" class="" />
+        </div>
 
-          <div class="slide">
-            <img src="sneak4.jpg" alt="" class="" >
-          </div>
+        <div class="slide">
+          <img src="sneak4.jpg" alt="" class="" />
+        </div>
 
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
@@ -96,7 +94,7 @@
         <div id="buyItems">
           <!-- <h4 class="empty">Your shopping cart is empty</h4> -->
         </div>
-        <button class="btn checkout ">Check out</button>
+        <button class="btn checkout">Check out</button>
       </div>
 
       <div class="product">
