--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="inLine">
             <div class="counter">
               <button class="btn-minus">-</button>
-              <input type="number" value="0" class="quantity" />
+              <input type="number" class="quantity" />
               <button class="btn-plus">+</button>
             </div>
           </div>
